#your project's CmakeLists.txt 
cmake_minimum_required(VERSION 3.13)

#1.set SDK path (environment variable or explicity path )
set(PICO_SDK_PATH "C:/Users/ishar/.pico-sdk/sdk/2.2.0")

#2.include the SDK's top-level Cmake file.
include(${PICO_SDK_PATH}/external/pico_sdk_import.cmake)

project(blink C CXX ASM)
# set(picotoolVersion 2.2.0-a4)
set(picotool_DIR "C:/Users/ishar/.pico-sdk/picotool/2.2.0-a4/picotool" CACHE PATH "Path to picotool")

#3.INitilize the sdk 
pico_sdk_init()

#4add your executable with YOUR  source files 
add_executable(blink
    ram_f.c
)
# Set build type to Debug for debug symbols
set(CMAKE_BUILD_TYPE Debug)

#5. LINk pico SDK targets (this pulls in SDK  source files !)
target_link_libraries(blink
    pico_stdlib   # <- Cmake knows to compile pico_stdlib source files 
  
)
# Force code to run from RAM
pico_set_binary_type(blink copy_to_ram)
pico_enable_stdio_usb(blink 1)

pico_enable_stdio_uart(blink 0)

pico_add_extra_outputs(blink)
# cmake -DCMAKE_BUILD_TYPE=Debug -DPICO_BOARD=pico ..